--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,9 +101,9 @@ elseif()
     message(STATUS "Did not find Sigc++2! Please install it before you try to compile again.")
 endif()
 
-# Link to libpiga
-target_link_libraries(piga)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libpiga/include)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libpiga)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libpiga/include)
+target_link_libraries(pihud piga)
 
 # Activate C++11
 list(APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
