Added easylogging++.h header - library is now building.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(HDRS
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/)
 
 add_library(${PROJECT_NAME} SHARED ${SRCS} ${HDRS})
 
